# fp-lab3

./: README.md  fp3.cabal
.github/workflows/: haskell.yml
app/: Main.hs
src/: CLI.hs  Engine.hs  Parse.hs  Types.hs
src/Engine/: Stream.hs
src/Format/: Printer.hs
src/Interpolation/: Class.hs  Linear.hs  Newton.hs
src/Stream/: Resampler.hs  SlidingWindow.hs
src/Util/: Validate.hs
test/: CLISpec.hs  EngineSpec.hs  EngineStreamSpec.hs  LinearSpec.hs  NewtonSpec.hs  ParserSpec.hs  PrinterSpec.hs  ResamplerSpec.hs  Spec.hs  ValidateSpec.hs  WindowSpec.hs
