cabal-version:       3.8
name:                fp-lab3
version:             0.1.0.0
build-type:          Simple

common warnings
  ghc-options:       -Wall

library
  import:            warnings
  hs-source-dirs:    src
  exposed-modules:
      CLI
    , Types
    , Parse
    , Engine
    , Engine.Stream
    , Stream.SlidingWindow
    , Stream.Resampler
    , Interpolation.Class
    , Interpolation.Linear
    , Interpolation.Newton
    , Format.Printer
    , Util.Validate
  build-depends:
      base >=4.14 && <5
    , split               >=0.2 && <0.3
    , optparse-applicative >=0.16 && <0.19
    , containers          >=0.6  && <0.8
  default-language:  Haskell2010

executable fp-lab3
  import:            warnings
  hs-source-dirs:    app
  main-is:           Main.hs
  build-depends:
      base >=4.14 && <5
    , fp-lab3
    , optparse-applicative >=0.16 && <0.19
  default-language:  Haskell2010

test-suite fp-lab3-test
  import:            warnings
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Spec.hs
  other-modules:
      ParserSpec
    , WindowSpec
    , LinearSpec
    , NewtonSpec
    , EngineStreamSpec
    , ValidateSpec
    , ResamplerSpec
    , PrinterSpec
    , CLISpec
  build-depends:
      base >=4.14 && <5
    , fp-lab3
    , hspec
    , QuickCheck >=2.14
  default-language:  Haskell2010
